<resources>
    <string name="app_name">Hotayi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product">Product</string>
    <string name="retrieve_from_rack">Retrieve from Rack</string>
    <string name="warehouse_map">Warehouse Map</string>
    <string name="report">Report</string>
    <string name="receive_product">Receive Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_details">Product Details</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="rack">Rack</string>
    <string name="row">Row</string>
    <string name="column">Column</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="addrack">Add Rack</string>
    <string name="deleterack">Delete Rack</string>
    <string name="rackid">Rack ID</string> <string name="quantity_to_production">Quantity to Production</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="_0">0</string>

</resources>