<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_alignParentTop="false"
    android:layout_gravity="center"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:focusableInTouchMode="false"
    android:isScrollContainer="false">

    <TextView
        android:id="@+id/textView_pop1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/input_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@id/textView_pop1"
        android:ems="3"
        android:hint="@string/_1"
        android:inputType="numberSigned"
        android:maxLength="1"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView_pop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/input_num"
        android:text="@string/rack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_pop3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_pop1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/row"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_pop4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_pop3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/column"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/btn_Confirm"
        android:text="@string/cancel" />

    <Spinner
        android:id="@+id/spn_Row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_num"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/textView_pop3"
        android:dropDownWidth="70dp"
        android:entries="@array/singednumber"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spn_Col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_Row"
        android:layout_toEndOf="@id/textView_pop4"
        android:dropDownWidth="70dp"
        android:entries="@array/singednumber"
        android:minHeight="48dp" />


</RelativeLayout>