<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        tools:context=".ProductFragment">

        <!-- TODO: Update blank fragment layout -->

        <Button
            android:id="@+id/receiveProduct"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/productnav1"
            android:text="@string/receive_product"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addProduct"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/productnav2"
            android:text="@string/add_product"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiveProduct" />

        <Button
            android:id="@+id/productDetails"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/productnav3"
            android:text="@string/product_details"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addProduct" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
